# Django_lecture1_board

./: .gitignore  README.md  pyproject.toml
board/: models.py  views.py
board/migrations/: 0001_initial.py
config/: settings.py  urls.py
static/: style.css
templates/: base.html  header.html
templates/attendance/: enrolled.html  list.html
templates/practice/: index_c2.html  index_f2.html  index_f3.html  index_f4.html  index_f5.html
templates/question/: detail.html  enrolled.html  list.html
warmingup/: admin.py  apps.py  models.py  views.py
warmingup/migrations/: 0001_initial.py  0002_auto_20221003_1410.py
